cs70 mt1 review: tiny details

--- a/cs70/sp13/cs70-mt1-sp13-review.tex
+++ b/cs70/sp13/cs70-mt1-sp13-review.tex
@@ -202,7 +202,7 @@ x^2 = (2k + 1)^2 = 4k^2 + 4k + 1 = 2(2k^2 + 2k) + 1 \nonumber \\
 
 \begin{frame}[fragile]
   \frametitle{Divisible?}
-  (Fa06 Papadimitriou and Vazirani) Prove by induction that for every odd number (positive integer) n, $3^n + 4^n$ is divisible by 7. \newline \\
+  (Fa06 Papadimitriou and Vazirani #2) Prove by induction that for every odd number (positive integer) n, $3^n + 4^n$ is divisible by 7. \newline \\
   \uncover<2->{\alert<2->{
       Base Case: For n = 1, we know that $3 + 4 = 7$, which is divisible by 7. \newline  \\
   }}
@@ -225,7 +225,7 @@ x^2 = (2k + 1)^2 = 4k^2 + 4k + 1 = 2(2k^2 + 2k) + 1 \nonumber \\
 
 \begin{frame}[fragile]
   \frametitle{Chocolate}
-  (Vazirani Fa12 Midterm 1 3b)
+  (Vazirani Fa12 Midterm 1 #3b)
   You wish to break a standard $m × n$ Hershey chocolate bar into $mn$ little squares to distribute to $mn$ kids. In each step you can pick up exactly one piece of chocolate and break it along one
 of the horizontal or vertical lines etched into the bar. No stacking! Prove by induction that the minimum number of steps required to completely break the bar into $mn$ little squares is
 $mn - 1$.\newline \\
@@ -244,7 +244,7 @@ necessary, and we observe that $g(r) = r - 1 = 0$. \newline \\
 
 \begin{frame}[fragile]
   \frametitle{Chocolate Step}
-  (Vazirani Fa12 Midterm 1 3b)
+  (Vazirani Fa12 Midterm 1 #3b)
   You wish to break a standard $m × n$ Hershey chocolate bar into $mn$ little squares to distribute to $mn$ kids. In each step you can pick up exactly one piece of chocolate and break it along one
 of the horizontal or vertical lines etched into the bar. No stacking! Prove by induction that the minimum number of steps required to completely break the bar into $mn$ little squares is
 $mn - 1$.\newline \\
