--- a/cs70/sp13/cs70-mt1-sp13-review.tex
+++ b/cs70/sp13/cs70-mt1-sp13-review.tex
@@ -202,7 +202,7 @@ x^2 = (2k + 1)^2 = 4k^2 + 4k + 1 = 2(2k^2 + 2k) + 1 \nonumber \\
 
 \begin{frame}[fragile]
   \frametitle{Divisible?}
-  (Fa06 Papadimitriou and Vazirani \#2) Prove by induction that for every odd number (positive integer) n, $3^n + 4^n$ is divisible by 7. \newline \\
+  (Fa06 Papadimitriou and Vazirani 2) Prove by induction that for every odd positive integer $n$, $3^n + 4^n$ is divisible by 7. \newline \\
   \uncover<2->{\alert<2->{
       Base Case: For n = 1, we know that $3 + 4 = 7$, which is divisible by 7. \newline  \\
   }}
@@ -225,7 +225,7 @@ x^2 = (2k + 1)^2 = 4k^2 + 4k + 1 = 2(2k^2 + 2k) + 1 \nonumber \\
 
 \begin{frame}[fragile]
   \frametitle{Chocolate}
-  (Vazirani Fa12 Midterm 1 \#3b)
+  (Vazirani Fa12 Midterm 1 3b)
   You wish to break a standard $m × n$ Hershey chocolate bar into $mn$ little squares to distribute to $mn$ kids. In each step you can pick up exactly one piece of chocolate and break it along one
 of the horizontal or vertical lines etched into the bar. No stacking! Prove by induction that the minimum number of steps required to completely break the bar into $mn$ little squares is
 $mn - 1$.\newline \\
@@ -244,7 +244,7 @@ necessary, and we observe that $g(r) = r - 1 = 0$. \newline \\
 
 \begin{frame}[fragile]
   \frametitle{Chocolate Step}
-  (Vazirani Fa12 Midterm 1 \#3b)
+  (Vazirani Fa12 Midterm 1 3b)
   You wish to break a standard $m × n$ Hershey chocolate bar into $mn$ little squares to distribute to $mn$ kids. In each step you can pick up exactly one piece of chocolate and break it along one
 of the horizontal or vertical lines etched into the bar. No stacking! Prove by induction that the minimum number of steps required to completely break the bar into $mn$ little squares is
 $mn - 1$.\newline \\
@@ -296,25 +296,6 @@ I'm not going to go over the whole proof with you, for the sake of time, but you
 }
 \end{enumerate}
 \end{frame}
-
-\begin{frame}[fragile]
-\frametitle{Applying the logic}
-\begin{tabular}{|c|c|c|c|c|}
-\hline
-Male Pref & 1 & 2 & 3 & 4\\
-\hline
-A & E & F & G & H\\
-B & G & F & E & H\\
-C & E & G & H & F\\
-D & F & E & G & H\\
-\hline
-\end{tabular}\newline
-If you are told that the male-optimal stable marriage pairing is \{(A, E), (B, F), (C, G), (D, H)\}, can you have a stable marriage pairing such that D is paired up with someone other than H?\\
-\uncover<2->{\alert<2>{
-No, because if there was such a pairing, then that pairing would have formed a rogue couple in this set.
-}}
-\end{frame}
-
 \begin{frame}[fragile]
 \frametitle{Go go go!}
 Now let's try a practice question.\\ 
