Small typo induction

--- a/cs70/sp13/cs70-mt1-sp13-review.tex
+++ b/cs70/sp13/cs70-mt1-sp13-review.tex
@@ -252,7 +252,7 @@ $mn - 1$.\newline \\
       We will use induction on $r = mn$; induction on the number of pieces in the bar. \newline \\
   }}
   \uncover<3->{\alert<3->{
-      Induction Step: Prove for $P(m + 1)$. \\
+      Induction Step: \\
       Consider $r = k + 1$. Since we have one big piece and $k + 1$ pieces to distribute, we need to begin by making 1 break. This results in two bars, one with $u < k + 1$ and another with
 $v < k + 1$ pieces, where $u + v = k + 1$. Applying the inductive hypothesis, it takes a minimum of
 $g(v) =  v - 1$ breaks on the bar of size $v$, and it takes $g(u) = u - 1$ breaks on the bar of size $u$. The
